RESOLVED FIXED 101699
Changing pseudoClass (:target) is changed, we should invalidate distribution.
https://bugs.webkit.org/show_bug.cgi?id=101699
Summary Changing pseudoClass (:target) is changed, we should invalidate distribution.
Shinya Kawanaka
Reported 2012-11-08 20:50:54 PST
When :target pseudoClass is dynamically changed, we should invalidate distribution. # I have to investigate how to cause this...
Attachments
WIP (17.45 KB, patch)
2012-11-13 00:21 PST, Shinya Kawanaka
no flags
Patch (6.90 KB, patch)
2012-11-13 22:27 PST, Shinya Kawanaka
no flags
Patch (6.42 KB, patch)
2012-11-14 00:48 PST, Shinya Kawanaka
no flags
Shinya Kawanaka
Comment 1 2012-11-13 00:21:31 PST
Shinya Kawanaka
Comment 2 2012-11-13 00:22:13 PST
This patch also contains a patch for Bug 101903, since this is dependent to it.
Shinya Kawanaka
Comment 3 2012-11-13 22:27:57 PST
Hajime Morrita
Comment 4 2012-11-13 23:43:05 PST
Comment on attachment 174078 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=174078&action=review > Source/WebCore/dom/ElementShadow.cpp:276 > + case SelectRuleFeatureSet::RuleFeatureChecked: We could have a helper method which tells us whether we need invalidateDistribution() call.
Shinya Kawanaka
Comment 5 2012-11-14 00:48:06 PST
Shinya Kawanaka
Comment 6 2012-11-14 00:48:52 PST
(In reply to comment #4) > (From update of attachment 174078 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=174078&action=review > > > Source/WebCore/dom/ElementShadow.cpp:276 > > + case SelectRuleFeatureSet::RuleFeatureChecked: > > We could have a helper method which tells us whether we need invalidateDistribution() call. Done. hasSelectorFor() is suitable for this purpose.
WebKit Review Bot
Comment 7 2012-11-14 01:28:44 PST
Comment on attachment 174095 [details] Patch Clearing flags on attachment: 174095 Committed r134572: <http://trac.webkit.org/changeset/134572>
WebKit Review Bot
Comment 8 2012-11-14 01:28:47 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.