Changing pseudoClass (:target) should cause distribution https://bugs.webkit.org/show_bug.cgi?id=101699

Reviewed by Hajime Morita.

Source/WebCore:

When cssTarget element is changed, we might have to invalidate distribution. We check its necessity
by consulting with SelectRuleFeatureSet.

We also implement invalidateParentDistributionIfNecessary for all collected features in this patch.

Test: fast/dom/shadow/pseudoclass-update-target.html

* dom/Document.cpp:
(WebCore::Document::setCSSTarget):
* dom/ElementShadow.cpp:
(WebCore::invalidateParentDistributionIfNecessary):
(WebCore):
* dom/ElementShadow.h:
(WebCore):
* html/shadow/SelectRuleFeatureSet.h:
(WebCore::SelectRuleFeatureSet::hasSelectorFor):
(SelectRuleFeatureSet):

LayoutTests:

* fast/dom/shadow/pseudoclass-update-target-expected.html: Added.
* fast/dom/shadow/pseudoclass-update-target.html: Added.


Canonical link: https://commits.webkit.org/120297@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134572 268f45cc-cd09-0410-ab3c-d52691b4dbfc